--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-"type":"module",
+  "type": "module",
   "scripts": {
-    "start":"node index.js",
-"dev":"nodemon index.js",
-"test":"node --experimental-vm-modules node_modules/jest/bin/jest.js"  
-},
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jbach-dev/justHub.git"
@@ -33,5 +33,9 @@
     "jest": "~27.4.4",
     "nodemon": "~2.0.15",
     "prettier": "~2.5.1"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "~1.28.5",
+    "fastify": "~3.24.1"
   }
 }
